--- a/index.html
+++ b/index.html
@@ -169,6 +169,22 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">C/C++ <i class="val">70%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
+            <div class="progress">
+              <span class="skill">Java <i class="val">40%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+
           </div>
 
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -196,21 +212,7 @@
                 </div>
               </div>
             </div>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">C/C++ <i class="val">70%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-
+            
             <div class="progress">
               <span class="skill">Python <i class="val">40%</i></span>
               <div class="progress-bar-wrap">
@@ -218,8 +220,8 @@
                 </div>
               </div>
             </div>
+            
           </div>
-
         </div>
 
       </div>
