--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
               <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Notes"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Password Generator"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/Password-Generator/" target="_blank" title="More Details"><i
                     class="bx bx-link"></i></a>
               </div>
