--- a/index.html
+++ b/index.html
@@ -520,9 +520,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-15.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-15.png" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-15.jpg" data-gallery="portfolioGallery"
+                <a href="assets/img/portfolio/portfolio-15.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Weather"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/Weather/" target="_blank" title="More Details"><i
                     class="bx bx-link"></i></a>
