--- a/index.html
+++ b/index.html
@@ -340,9 +340,9 @@
 
         <div class="section-title">
           <h2>Projects</h2>
-          <p>Here are some projects that I have made using HTML, CSS, JavaScript and Python.</p>
+          <p>Here are some projects that I have made using HTML, CSS, JavaScript, ReactJS and Python.</p>
         </div>
-
+        
         <div class="row" data-aos="fade-up">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
@@ -355,6 +355,7 @@
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
+          <!-- IPL Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid setimg" alt="">
