--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
             </div>
           </div>
 
+          <!-- World Clock -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid setimg" alt="">
@@ -453,6 +454,7 @@
             </div>
           </div>
 
+          <!-- Banking Website -->
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid setimg" alt="">
@@ -465,6 +467,7 @@
             </div>
           </div> -->
 
+          <!-- Donation Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid setimg" alt="">
@@ -477,6 +480,7 @@
             </div>
           </div>
 
+          <!-- To-Do List -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid setimg" alt="">
