--- a/index.html
+++ b/index.html
@@ -493,6 +493,7 @@
             </div>
           </div>
 
+          <!-- Quiz -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid setimg" alt="">
@@ -505,6 +506,7 @@
             </div>
           </div>
 
+          <!-- Notes -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid setimg" alt="">
@@ -517,6 +519,7 @@
             </div>
           </div>
 
+          <!-- Password Generator -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid setimg" alt="">
@@ -529,6 +532,7 @@
             </div>
           </div>
 
+          <!-- Weather Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-15.png" class="img-fluid setimg" alt="">
