--- a/index.html
+++ b/index.html
@@ -582,9 +582,11 @@
 
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
               <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14231.759663171384!2d75.8816968708383!3d26.905401915180114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396db75b141ec5e3%3A0xd48ba3dcae11227f!2sJamdoli%2C%20Jaipur%2C%20Rajasthan%20302031!5e0!3m2!1sen!2sin!4v1643604704969!5m2!1sen!2sin"
                 width="600" height="450" style="border:0; width: 100%; height: 290px;" allowfullscreen=""
-                mapTypeId="satellite" loading="lazy"></iframe>
+                mapTypeId="satellite" loading="lazy">
+              </iframe>
+              <!-- https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin -->
             </div>
 
           </div>
