--- a/index.html
+++ b/index.html
@@ -583,10 +583,12 @@
               <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d227748.38256215164!2d75.65046958396543!3d26.8854479181142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396c4adf4c57e281%3A0xce1c63a0cf22e09!2sJaipur%2C%20Rajasthan!5e0!3m2!1sen!2sin!4v1643605993860!5m2!1sen!2sin"
-                width="600" height="450" style="border:0; width: 100%; height: 290px;" allowfullscreen=""
-                mapTypeId="satellite" loading="lazy">
+                width="600" height="450" style="border:0; width: 100%; height: 290px;">
               </iframe>
-              <!-- https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin -->
+              <!-- https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d889.5002592428738!2d75.89586982917945!3d26.903462194903152!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMjbCsDU0JzEyLjUiTiA3NcKwNTMnNDcuMSJF!5e0!3m2!1sen!2sin!4v1618215598418!5m2!1sen!2sin
+               allowfullscreen=""
+                mapTypeId="satellite" loading="lazy"
+              -->
             </div>
 
           </div>
