--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
           </div>
 
           <!-- To-Do List -->
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid setimg" alt="">
               <div class="portfolio-links">
@@ -540,6 +540,19 @@
                 <a href="assets/img/portfolio/portfolio-15.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Weather"><i class="bx bx-plus"></i></a>
                 <a href="https://rahulkumarjhamtani.github.io/Weather/" target="_blank" title="More Details"><i
+                    class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <!-- Chatting Website -->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/portfolio-16.jpg" class="img-fluid setimg" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Chatter"><i class="bx bx-plus"></i></a>
+                <a href="https://rahulkumarjhamtani.github.io/Chatter/" target="_blank" title="More Details"><i
                     class="bx bx-link"></i></a>
               </div>
             </div>
