--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
           <!-- IPL Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid setimg" alt="IPL">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="IPL"><i class="bx bx-plus"></i></a>
@@ -372,7 +372,7 @@
           <!-- CSS Car Animation -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid setimg" alt="Car Animation">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Car Animation"><i class="bx bx-plus"></i></a>
@@ -384,7 +384,7 @@
           <!-- Mobile Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid setimg" alt="Mobile">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Mobile"><i class="bx bx-plus"></i></a>
@@ -397,7 +397,7 @@
           <!-- Text Editor Python -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid setimg" alt="PlusPad">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="PlusPad"><i class="bx bx-plus"></i></a>
@@ -409,7 +409,7 @@
           <!-- Songs Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid setimg" alt="Songs">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Songs"><i class="bx bx-plus"></i></a>
@@ -421,7 +421,7 @@
           <!-- Google Chrome Extensions -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-6.jpeg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-6.jpeg" class="img-fluid setimg" alt="Extensions">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpeg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Extentions"><i class="bx bx-plus"></i></a>
@@ -433,7 +433,7 @@
           <!-- Login Pages -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid setimg" alt="Login-Pages">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-7.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Login-Pages"><i class="bx bx-plus"></i></a>
@@ -445,7 +445,7 @@
           <!-- World Clock -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid setimg" alt="World Clock">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="World Clock"><i class="bx bx-plus"></i></a>
@@ -458,7 +458,7 @@
           <!-- Banking Website -->
           <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid setimg" alt="Bank">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Bank"><i class="bx bx-plus"></i></a>
@@ -471,7 +471,7 @@
           <!-- Donation Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-10.png" class="img-fluid setimg" alt="Trees Nation">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-10.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Trees Nation"><i class="bx bx-plus"></i></a>
@@ -484,7 +484,7 @@
           <!-- To-Do List -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-11.jpg" class="img-fluid setimg" alt="Todo List">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-11.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Todo List"><i class="bx bx-plus"></i></a>
@@ -497,7 +497,7 @@
           <!-- Quiz -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-12.png" class="img-fluid setimg" alt="Quiz">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-12.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Quiz"><i class="bx bx-plus"></i></a>
@@ -510,7 +510,7 @@
           <!-- Notes -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-13.jpg" class="img-fluid setimg" alt="Notes">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-13.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Notes"><i class="bx bx-plus"></i></a>
@@ -523,7 +523,7 @@
           <!-- Password Generator -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-14.jpg" class="img-fluid setimg" alt="Password Generator">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-14.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Password Generator"><i class="bx bx-plus"></i></a>
@@ -536,7 +536,7 @@
           <!-- Weather Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-web">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-15.png" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-15.png" class="img-fluid setimg" alt="Weather">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-15.png" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Weather"><i class="bx bx-plus"></i></a>
@@ -549,7 +549,7 @@
           <!-- Chatting Website -->
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-16.jpg" class="img-fluid setimg" alt="">
+              <img src="assets/img/portfolio/portfolio-16.jpg" class="img-fluid setimg" alt="Chatter">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-16.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Chatter"><i class="bx bx-plus"></i></a>
