--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B. Tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>rahulkumarjhamtani@gmail.com</span>
@@ -238,7 +238,7 @@
 
         <div class="section-title">
           <h2>Resume</h2>
-          <p>I am thriving as an Associate Software Developer at Cyntexa, a leading Salesforce Crest (Gold) Consulting Partner. In this role, I have gained extensive expertise in Salesforce development, having worked across three clouds: Sales Cloud, Vlocity Cloud, and Commerce Cloud.</p>
+          <p>I am thriving as a Software Developer at Cyntexa, a leading Salesforce Crest (Gold) Consulting Partner. In this role, I have gained extensive expertise in Salesforce development, having worked across three clouds: Sales Cloud, Vlocity Cloud, and Commerce Cloud.</p>
         </div>
 
         <div class="row">
@@ -300,7 +300,7 @@
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
             <div class="resume-item">
-              <h4>Associate Software Developer at Cyntexa</h4>
+              <h4>Software Developer at Cyntexa</h4>
               <h5>July 2022 - Present</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
