--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>B. Tech</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
                     <span>rahulkumarjhamtani@gmail.com</span>
@@ -219,7 +219,7 @@
             </div>
 
             <div class="progress">
-              <span class="skill">Salesforce <i class="val">70%</i></span>
+              <span class="skill">Salesforce <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -246,7 +246,7 @@
             <h3 class="resume-title">Summary</h3>
             <div class="resume-item pb-0">
               <h4>Rahul Jhamtani</h4>
-              <p><em>Innovative and deadline-driven Designer and Developer with 2+ years of experience designing and
+              <p><em>Innovative and deadline-driven Designer and Developer with 3+ years of experience designing and
                   developing webpages, websites and softwares.</em></p>
               <ul>
                 <li>Jaipur, Raj.</li>
@@ -272,6 +272,11 @@
                 examination catering to Science and Commerce faculties.</p>
             </div>
             <h3 class="resume-title">Participation</h3>
+            <div class="resume-item">
+              <h4>Agentforce Hackathon</h4>
+              <h5>23rd July 2025</h5>
+              <p><em>PwC & Salesforce</em></p>
+            </div>
             <div class="resume-item">
               <h4>Winter Study Tour</h4>
               <h5>29th January - 4th February 2023</h5>
@@ -300,8 +305,18 @@
             <h3 class="resume-title">Professional Experience</h3>
             <!-- <div class="resume-item pb-0"> -->
             <div class="resume-item">
+              <h4>Associate at PwC</h4>
+              <h5>April 2025 - Present</h5>
+              <p><em>Jaipur, Raj.</em></p>
+              <ul>
+                <li>Implemented end-to-end Salesforce solutions including Apex, LWC, and integrations to optimize business processes</li>
+                <li>Developed conversational AI solutions using Salesforce Agentforce for enhanced customer engagement</li>
+                  <li>Reach : <a href="https://www.pwc.in/" target="blank">PwC</a></li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Software Developer at Cyntexa</h4>
-              <h5>July 2022 - Present</h5>
+              <h5>July 2022 - March 2025</h5>
               <p><em>Jaipur, Raj.</em></p>
               <ul>
                 <li>Customized, developed, enhanced & supported the applications of Salesforce CRM</li>
