--- a/index.html
+++ b/index.html
@@ -276,6 +276,7 @@
               <h4>Agentforce Hackathon</h4>
               <h5>23rd July 2025</h5>
               <p><em>PwC & Salesforce</em></p>
+              <p>Won 3rd Prize</p>
             </div>
             <div class="resume-item">
               <h4>Winter Study Tour</h4>
